k8s/reservation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation
          image: wassimabderrazak/reservation-service:latest
          ports:
            - containerPort: 5002
