k8s/salle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
        - name: salle
          image: wassimabderrazak/salle-service:latest
          ports:
            - containerPort: 5001
