k8s/salle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
